--- a/3年後期/線形フィードバック制御/demo2.ipynb
+++ b/3年後期/線形フィードバック制御/demo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "25905dcf-4422-4ebe-bc50-31ac7ff15cc4",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
